# FILE(GLOB SRC *.cpp)

cmake_minimum_required(VERSION 2.6)

set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUNIX -D_LINUX=1 -DCMDLINE=1")

SET(SRC
  cppLPS331AP.cpp
)
ADD_LIBRARY(LPS331AP SHARED ${SRC})
TARGET_LINK_LIBRARIES(LPS331AP -lpigpiod_if2)
install(TARGETS LPS331AP DESTINATION ${project_LIB_DIR}/)
